--- a/app/src/main/res/layout/activity_info_list.xml
+++ b/app/src/main/res/layout/activity_info_list.xml
@@ -10,21 +10,23 @@
 
     <RelativeLayout
         android:id="@+id/layout_top"
-        android:layout_below="@+id/layout_head"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_head">
+
         <include
             android:id="@+id/layout_info"
             layout="@layout/item_info_top" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_marginTop="12dp"
-        android:background="@color/white"
         android:id="@+id/layout_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layout_top">
+        android:layout_below="@id/layout_top"
+        android:layout_marginTop="12dp"
+        android:background="@color/white">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,8 +34,9 @@
             android:paddingBottom="12dp"
             android:paddingLeft="17dp"
             android:paddingTop="12dp"
+            android:textColor="#494949"
             android:text="我的员工"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/fragment_home_success_more"
@@ -46,16 +49,18 @@
             android:paddingRight="12dp"
             android:paddingTop="12dp"
             android:text=""
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
+
     </RelativeLayout>
 
-    <cn.fpower.financeservice.view.widget.swipelistview.SwipeMenuListView        android:layout_below="@+id/layout_title"
+    <cn.fpower.financeservice.view.widget.swipelistview.SwipeMenuListView
         android:id="@+id/fragment_progress_rlv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/layout_title"
         android:divider="#bababa"
         android:dividerHeight="1dp"
         android:listSelector="@android:color/transparent"
-        android:scrollbars="none"/>
+        android:scrollbars="none" />
 
 </RelativeLayout>
