--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -18,7 +18,7 @@
 
     <TextView
         android:layout_below="@+id/img_logo"
-        android:id="@+id/value"
+        android:id="@+id/version"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
