--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,6 +61,20 @@
                     android:text="利息低"
                     android:textColor="#494949"
                     android:textSize="13sp"/>
+                <TextView
+                    android:id="@+id/fragment_home_limit_tv"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:drawablePadding="10dp"
+                    android:drawableTop="@mipmap/height_limit"
+                    android:gravity="center"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="17dp"
+                    android:text="额度高"
+                    android:textColor="#494949"
+                    android:textSize="13sp"/>
 
                 <TextView
                     android:id="@+id/fragment_home_loan_tv"
@@ -74,21 +88,6 @@
                     android:paddingBottom="15dp"
                     android:paddingTop="17dp"
                     android:text="放款快"
-                    android:textColor="#494949"
-                    android:textSize="13sp"/>
-
-                <TextView
-                    android:id="@+id/fragment_home_limit_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/height_limit"
-                    android:gravity="center"
-                    android:paddingBottom="15dp"
-                    android:paddingTop="17dp"
-                    android:text="额度高"
                     android:textColor="#494949"
                     android:textSize="13sp"/>
 
@@ -143,7 +142,8 @@
                     android:paddingLeft="17dp"
                     android:paddingTop="12dp"
                     android:text="成功案例"
-                    android:textSize="12sp"/>
+                    android:textColor="@color/black"
+                    android:textSize="14sp"/>
 
                 <TextView
                     android:id="@+id/fragment_home_success_more"
@@ -155,7 +155,7 @@
                     android:paddingLeft="15dp"
                     android:paddingRight="12dp"
                     android:paddingTop="12dp"
-                    android:text="更多"
+                    android:text="更多>>"
                     android:textSize="12sp"/>
 
             </RelativeLayout>
