--- a/app/src/main/res/layout/ui_add_info.xml
+++ b/app/src/main/res/layout/ui_add_info.xml
@@ -12,29 +12,39 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:text="员工姓名"
-        android:textColor="#272727"
+        android:textColor="#000000"
         android:textSize="14sp" />
+
+    <LinearLayout
+
+        android:layout_toRightOf="@+id/title"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:paddingRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:gravity="center_vertical"
+        android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/value"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:gravity="end"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:text=""
-        android:layout_marginRight="12dp"
-        android:layout_toLeftOf="@+id/img_go"
         android:textColor="#737373"
         android:textSize="14sp" />
 
     <ImageView
+        android:layout_marginLeft="12dp"
         android:id="@+id/img_go"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:src="@mipmap/fanhui"
-        android:paddingRight="23dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
+    </LinearLayout>
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
