--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
 
     <style name="edittext_linput">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#272727</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:layout_height">46dp</item>
@@ -39,6 +39,16 @@
         <item name="android:paddingTop">15dp</item>
         <item name="android:textColor">@drawable/progress_tab_text</item>
         <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 
 </resources>
